Reservation form added to tool show

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -5,4 +5,5 @@
   <%= f.time_field :reservation_time_start%>
   <h1><%= f.label :reservation_time_end %></h1>
   <%= f.time_field :reservation_time_end %>
+  <%= f.submit %>
 <% end  %>
