map setup in js

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -6,6 +6,8 @@
 <p><%= @tool.address %></p>
 <p><%= @tool.user.first_name %></p>
 
+<div id="mapid" ></div>
+
 <h2>Borrow this tool:</h2>
 
 <% if current_user %>
