map setup for tool show view

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -3,7 +3,7 @@
 <h1><%= @tool.name  %></h1>
 <p><%= @tool.description %></p>
 <p><%= @tool.price  %>$/hour</p>
-<p><%= @tool.address %></p>
+<p id="address"><%= @tool.address %></p>
 <p><%= @tool.user.first_name %></p>
 
 <div id="mapid" ></div>
