--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -6,7 +6,9 @@
 <p id="address"><%= @tool.address %></p>
 <p><%= @tool.user.first_name %></p>
 
-<div id="mapid" ></div>
+<div id="mapid" >
+  
+</div>
 
 <h2>Borrow this tool:</h2>
 
