--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,8 +1,8 @@
 <h1>Tools index</h1>
 
   <div class="search_bar">
-    <%= form_tag(tools_path, {:id => 'search_form'}) do %>
-    <%= text_field_tag :tool %>
+    <%= form_tag(tools_path, method: :get) do %>
+    <%= text_field_tag :search, params[:search] %>
     <%= submit_tag "Search" %>
     <% end %>
   </div>
