user address added to map

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,11 @@
       <ul class="header_nav">
         <li><%= link_to 'Home', tools_path %></li>
       <% if current_user %>
-        <li>Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %></li>
+        <li>
+          Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %>
+          <p>Your address:</p>
+          <span id="user_address">  <%= current_user.address %></span>
+        </li>
         <li><%= link_to 'Log out', session_path("current"), :method => :delete  %></li>
         <li><%= link_to 'Add tool', new_tool_path %></li>
       <% else %>
