--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,6 +5,8 @@
 <%= f.text_field :first_name  %>
 <h3><%= f.label :last_name %></h3>
 <%= f.text_field:last_name %>
+<h3><%= f.label :address %></h3>
+<%= f.text_field :address %>
 <h3><%= f.label :email %></h3>
 <%= f.text_field :email, placeholder:"name@example.com" %>
 <h3><%= f.label :password %></h3>
