--- a/app/assets/stylesheets/tool.scss
+++ b/app/assets/stylesheets/tool.scss
@@ -2,4 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#mapid, #mapindex { height: 300px; }
+#mapid, #mapindex {
+  width: 85%;
+  margin: 0px auto;
+  height: 520px;
+  z-index:0;
+}
