--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,18 +1,32 @@
 <h1>Sign-Up</h1>
 
 <%= form_for @user do |f| %>
-<h3><%= f.label :first_name %></h3>
-<%= f.text_field :first_name  %>
-<h3><%= f.label :last_name %></h3>
-<%= f.text_field:last_name %>
-<h3><%= f.label :address %></h3>
-<%= f.text_field :address %>
-<h3><%= f.label :email %></h3>
-<%= f.text_field :email, placeholder:"name@example.com" %>
-<h3><%= f.label :password %></h3>
-<%= f.password_field :password %>
-<h3><%= f.label :password_confirmation %></h3>
-<%= f.password_field :password_confirmation %>
+  <div class="form-group">
+    <label for="first_name">First name</label>
+    <%= f.text_field(:first_name, class: 'form-control') %>
+  </div>
+  <div class="form-group">
+    <label for="last_name">last name</label>
+    <%= f.text_field(:last_name, class: 'form-control') %>
+  </div>
+  <div class="form-group">
+    <label for="address">Address</label>
+    <%= f.text_field(:address, class: 'form-control') %>
+  </div>
+  <div class="form-group">
+    <label for="email">Email</label>
+    <%= f.email_field(:email, class: 'form-control', placeholder:"name@example.com") %>
+  </div>
+  <div class="form-group">
+    <label for="password">Password</label>
+    <%= f.password_field(:password, class: 'form-control') %>
+  </div>
+  <div class="form-group">
+    <label for="password_confirmation">Password Confirmation</label>
+    <%= f.password_field(:password_confirmation, class: 'form-control') %>
+  </div>
 
-<%= f.submit "Signup" %>
+  <div class="form-group">
+      <%= f.submit(class:"btn btn-primary") %>
+  </div>
 <% end %>
