--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,25 +28,40 @@
 
   </head>
   <header>
-    <div class="nav_bar">
-    <nav>
-      <ul class="header_nav">
-        <li><%= link_to 'Home', tools_path %></li>
-      <% if current_user %>
-        <li>
-          Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %>
-          <p>Your address:</p>
-          <span id="user_address">  <%= current_user.address %></span>
+    <h1 class="title">Can I Borrow ?</h1>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+     <ul class="navbar-nav">
+        <li class="nav-item">
+          <%= link_to 'Home', tools_path, class:"nav-link"  %>
         </li>
-        <li><%= link_to 'Log out', session_path("current"), :method => :delete  %></li>
-        <li><%= link_to 'Add tool', new_tool_path %></li>
-      <% else %>
-        <li><%= link_to 'Log In', new_session_path %></li>
-        <li><%= link_to 'Sign Up', new_user_path %></li>
-      <% end %>
-      </nav>
-    </ul>
-  </div>
+        <% if current_user %>
+        <li class="nav-item">
+          Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your location: <span id="user_address">  <%= current_user.address %></span>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link"  %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Add tool', new_tool_path, class:"nav-link" %>
+        </li>
+        <% else %>
+        <li class="nav-item">
+          <%= link_to 'Log In', new_session_path, class:"nav-link" %>
+        </li>
+        <li class="nav-item">
+          <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
+        </li>
+        <% end %>
+      </ul>
+      <div class="search_bar">
+        <%= form_tag(tools_path, method: :get, class: "form-inline") do %>
+        <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "search" %>
+        <%= submit_tag "Search", class: "btn btn-outline-primary my-2 my-sm-0" %>
+        <% end %>
+      </div>
+    </nav>
+
+
 
   </header>
   <body>
