bootsrap added for tools form

--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,12 +1,22 @@
 <h1>Create your tool</h1>
 <%= form_for @tool do |f| %>
-  <h3><%= f.label :name %></h3>
-  <%= f.text_field :name  %>
-  <h3><%= f.label :description %></h3>
-  <%= f.text_area :description %>
-  <h3><%= f.label :price %></h3>
-  <%= f.number_field :price %>
-  <h3><%= f.label :address %></h3>
-  <%= f.text_area :address %>
-  <%= f.submit "add Tool" %>
+<div class="form-group">
+  <label for="name">Tool's name</label>
+  <%= f.text_field :name, class: 'form-control'  %>
+</div>
+<div class="form-group">
+  <label for="description">Tool's Description</label>
+  <%= f.text_field :description, class: 'form-control'  %>
+</div>
+<div class="form-group">
+  <label for="price">Price</label>
+  <%= f.text_field :price, class: 'form-control'  %>
+</div>
+<div class="form-group">
+  <label for="name">Tool's address</label>
+  <%= f.text_field :address, class: 'form-control'  %>
+</div>
+<div class="form-group">
+  <%= f.submit "add Tool", class:"btn btn-primary" %>
+</div>
 <% end %>
