--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,15 +1,11 @@
 <%= form_for([tool, reservation]) do |f| %>
 <div class="form-group">
-  <label for="date">Reservation's Date</label>
-  <%= f.date_field :date, class:'form-control'%>
-</div>
-<div class="form-group">
   <label for="reservation_time_start">From</label>
-  <%= f.time_field :reservation_time_start, class:'form-control'%>
+  <%= f.datetime_field :reservation_time_start, class:'form-control'%>
 </div>
 <div class="form-group">
   <label for="reservation_time_end">To</label>
-  <%= f.time_field :reservation_time_end, class:'form-control'%>
+  <%= f.datetime_field :reservation_time_end, class:'form-control'%>
 </div>
 <div class="form-group">
   <%= f.submit "Book this tool", class:"btn btn-primary" %>
