--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -7,7 +7,7 @@
           <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
           <p class="card-text"><%= tool.description %></p>
           <p><%= tool.address %></p>
-          <p>User: <%= tool.user.first_name %></p>
+          <p>User: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
           <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary">See posting</a>
         </div>
       </div>
