--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for([tool, reservation]) do |f| %>
 <div class="form-group">
   <label for="reservation_time_start">From</label>
-  <%= f.datetime_field :reservation_time_start, class:'form-control'%>
+  <%= f.datetime_select :reservation_time_start, {anpm: true, hour_step: 1, minute_step: 30}, {class:'form-control'}%>
 </div>
 <div class="form-group">
   <label for="reservation_time_end">To</label>
-  <%= f.datetime_field :reservation_time_end, class:'form-control'%>
+  <%= f.datetime_select :reservation_time_end, {anpm: true, hour_step: 1, minute_step: 30}, {class:'form-control'}%>
 </div>
 <div class="form-group">
   <%= f.submit "Book this tool", class:"btn btn-primary" %>
