--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,8 @@
 <h3>Location:</h3>
 <p><%= @user.address %></p>
 
-<h2>Current Posting:</h2>
+<h2>Current Postings:</h2>
+<div class="row">
   <% @user.tools.each do |tool|%>
     <div class="card">
       <div class="card-body" style="width: 18rem;">
