change map display to get array of addresses

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -3,11 +3,11 @@
 <h1><%= @tool.name  %></h1>
 <p><%= @tool.description %></p>
 <p><%= @tool.price  %>$/hour</p>
-<p id="address"><%= @tool.address %></p>
+<p id="address" class="toolAddress"><%= @tool.address %></p>
 <p><%= @tool.user.first_name %></p>
 
 <div id="mapid" >
-  
+
 </div>
 
 <h2>Borrow this tool:</h2>
