--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,12 +1,11 @@
 
-
-  <div class="row">
+<div class="row">
     <% @tools.each do |tool|%>
       <div class="card">
         <div class="card-body" style="width: 18rem;">
           <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
           <p class="card-text"><%= tool.description %></p>
-          <p><%= tool.address %></p>
+          <p class="toolAddress"><%= tool.address %></p>
           <p>User: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
           <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary">See posting</a>
         </div>
@@ -14,6 +13,6 @@
     <% end  %>
   </div>
 
-  <div id="mapindex">
+  <div id="mapid">
 
   </div>
