delete feature added

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -5,6 +5,9 @@
 <p><%= @tool.price  %>$/hour</p>
 <p id="address" class="toolAddress"><%= @tool.address %></p>
 <p><%= @tool.user.first_name %></p>
+<% if current_user == @tool.user %>
+<%= link_to "detele this tool", tool_path, method: :delete%>
+<% end %>
 
 <div id="mapid" >
 
