--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
     <% @tools.each do |tool|%>
       <div class="card">
-        <div class="card-body" style="width: 18rem;">
+        <div class="card-body" class="tool" style="width: 18rem;">
           <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
           <p class="card-text"><%= tool.description %></p>
           <p class="toolAddress"><%= tool.address %></p>
