--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -2,9 +2,11 @@
 
 <div class="card-body" style="width: 18rem;">
   <h1 class="card-title"><%= @tool.name  %> - <%= @tool.price  %>$/hour </h1>
+  <h4>Description:</h4>
   <p class="card-text"><%= @tool.description %></p>
+  <h4>Address:</h4>
   <p class="toolAddress"><%= @tool.address %></p>
-  <p><%= @tool.user.first_name %></p>
+  <p>User: <%=link_to( "#{@tool.user.full_name}", user_path(@tool.user) )%></p>
   <% if current_user == @tool.user %>
   <%= link_to "Edit your tool", edit_tool_path(@tool) %>
   <%= link_to "detele this tool", tool_path, method: :delete%>
