setup to display reservations on profile

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,7 +1,8 @@
 <h1>tool show</h1>
 
 <div class="card-body" style="width: 18rem;">
-  <h1 class="card-title"><%= @tool.name  %> - <%= @tool.price  %>$/hour </h1>
+  <h1 class="card-title"><%= @tool.name  %> </h1>
+  <p><%= @tool.price  %>$/hour </p>
   <h4>Description:</h4>
   <p class="card-text"><%= @tool.description %></p>
   <h4>Address:</h4>
