update user form added + partial created

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,6 +2,7 @@
 <p><%= @user.email %></p>
 <h3>Location:</h3>
 <p><%= @user.address %></p>
+<p><%= link_to 'Edit your profile', edit_user_path  %></p>
 
 <h2>Current Postings:</h2>
 <div class="row">
