--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,9 @@
 <p><%= @user.email %></p>
 <h3>Location:</h3>
 <p><%= @user.address %></p>
-<p><%= link_to 'Edit your profile', edit_user_path  %></p>
+<% if current_user == @user %>
+  <p><%= link_to 'Edit your profile', edit_user_path  %></p>
+<% end %>
 
 <h2>Current Postings:</h2>
 <div class="row">
@@ -19,14 +21,20 @@
   <% end  %>
 </div>
 
-<h2>Reservations for your tools:</h2>
-<div>
-  <% @user.tools.each do |tool| %>
-    <% tool.reservations.each do |res|  %>
-      <h2><%= res.tool.name %></h2>
-      <p>From: <%= res.reservation_time_start %></p>
-      <p>To: <%= res.reservation_time_end %></p>
-      <p><%= res.user.full_name %></p>
+<% if current_user == @user %>
+  <h2>Reservations pending for your tools:</h2>
+  <div class= "pending_res">
+    <% @user.tools.each do |tool| %>
+      <% tool.reservations.each do |res|  %>
+        <h2><%= res.tool.name %></h2>
+        <p>From: <%= res.reservation_time_start %></p>
+        <p>To: <%= res.reservation_time_end %></p>
+        <p><%= res.user.full_name %></p>
+        <p><%= link_to 'Accept' %> - <%= link_to 'Decline' %></p>
+      <% end %>
     <% end %>
-  <% end %>
-</div>
+  </div>
+  <div class="accepted_res">
+    <h2>Reservations accepted for your tools:</h2>
+  </div>
+<% end  %>
