--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -22,19 +22,39 @@
 </div>
 
 <% if current_user == @user %>
-  <h2>Reservations pending for your tools:</h2>
-  <div class= "pending_res">
+  <div class= "reservations">
+    <h2>Reservations for your tools:</h2>
     <% @user.tools.each do |tool| %>
       <% tool.reservations.each do |res|  %>
-        <h2><%= res.tool.name %></h2>
-        <p>From: <%= res.reservation_time_start %></p>
-        <p>To: <%= res.reservation_time_end %></p>
-        <p><%= res.user.full_name %></p>
-        <p><%= link_to 'Accept', "/tools/#{tool.id}/reservations/#{res.id}?status=accepted" , method: :put %> - <%= link_to 'Decline' %></p>
+        <% if res.status == "pending" %>
+        <div class="pending_res">
+          <p><%= res.tool.name %></p>
+          <p>From: <%= res.reservation_time_start %></p>
+          <p>To: <%= res.reservation_time_end %></p>
+          <p><%= res.user.full_name %></p>
+          <p>Status: <%= res.status %></p>
+          <p><%= link_to 'Accept', "/tools/#{tool.id}/reservations/#{res.id}?status=accepted" , method: :put %> -
+            <%= link_to 'Decline', "/tools/#{tool.id}/reservations/#{res.id}?status=declined" , method: :put %>
+          </p>
+        </div>
+        <% elsif res.status == "accepted" %>
+        <div class="accepted_res">
+          <p><%= res.tool.name %></p>
+          <p>From: <%= res.reservation_time_start %></p>
+          <p>To: <%= res.reservation_time_end %></p>
+          <p><%= res.user.full_name %></p>
+          <p>Status: <%= res.status %></p>
+        </div>
+        <% elsif res.status == "declined" %>
+        <div class="declined_res">
+          <p><%= res.tool.name %></p>
+          <p>From: <%= res.reservation_time_start %></p>
+          <p>To: <%= res.reservation_time_end %></p>
+          <p><%= res.user.full_name %></p>
+          <p>Status: <%= res.status %></p>
+        </div>
+        <% end %>
       <% end %>
     <% end %>
-  </div>
-  <div class="accepted_res">
-    <h2>Reservations accepted for your tools:</h2>
   </div>
 <% end  %>
