--- a/app/assets/stylesheets/reservations.scss
+++ b/app/assets/stylesheets/reservations.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the Reservations controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.reservations{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.pending_res{
+  grid-column: 1fr;
+}
+
+.accepted_res{
+  grid-column: 1fr;
+}
+
+.declined_res{
+  grid-column: 1fr;
+}
