--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
         <p class="card-text"><%= tool.description %></p>
         <p><%= tool.address %></p>
         <p>User: <%= tool.user.first_name %></p>
-        <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary">See posting</a>
+        <a href=<%= "/tools/#{tool.id}"%> class="btn btn-outline-primary">See posting</a>
       </div>
     </div>
   <% end  %>
@@ -26,20 +26,22 @@
   <h2>Reservations for your tools:</h2>
   <div class= "reservations">
     <div class="pending_res">
+      <h3>Pending:</h3>
       <% @reservations_pending.each do |res|  %>
-          <h3><%= res.tool.name %></h3>
+          <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start %></p>
           <p>To: <%= res.reservation_time_end %></p>
           <p><%= res.user.full_name %></p>
           <p>Status: <%= res.status %></p>
-          <p><%= link_to 'Accept', "/tools/#{res.tool.id}/reservations/#{res.id}?status=accepted" , method: :put %> -
-            <%= link_to 'Decline', "/tools/#{res.tool.id}/reservations/#{res.id}?status=declined" , method: :put %>
+          <p><%= link_to 'Accept', "/tools/#{res.tool.id}/reservations/#{res.id}?status=accepted" , method: :put, class: "btn btn-success" %>
+            <%= link_to 'Decline', "/tools/#{res.tool.id}/reservations/#{res.id}?status=declined" , method: :put, class: "btn btn-danger" %>
           </p>
       <% end %>
       </div>
       <div class="accepted_res">
+        <h3>Approved:</h3>
       <% @reservations_accepted.each do |res| %>
-          <h3><%= res.tool.name %></h3>
+          <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start %></p>
           <p>To: <%= res.reservation_time_end %></p>
           <p><%= res.user.full_name %></p>
@@ -47,8 +49,9 @@
       <% end %>
       </div>
       <div class="declined_res">
+        <h3>Declined:</h3>
       <% @reservations_declined.each do |res| %>
-          <h3><%= res.tool.name %></h3>
+          <h4><%= res.tool.name %></h4>
           <p>From: <%= res.reservation_time_start %></p>
           <p>To: <%= res.reservation_time_end %></p>
           <p><%= res.user.full_name %></p>
