--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 
+    <link href="https://fonts.googleapis.com/css?family=Rubik" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.4/dist/leaflet.css"
       integrity="sha512-puBpdR0798OZvTTbP4A8Ix/l+A4dHDD0DGqYW6RQ+9jxkRFclaxxQb/SJAWZfWAkuyeQUytO7+7N4QKrDh+drA=="
@@ -29,22 +30,30 @@
 
   <body>
     <header>
+      <div class="header_title">
         <h1 class="title">Can I Borrow ?</h1>
+      </div>
         <div id="stickbar">
           <nav class="navbar navbar-expand-lg navbar-light bg-light">
            <div class="navbar-nav">
               <li class="nav-item">
                 <%= link_to 'Home', tools_path, class:"nav-link"  %>
               </li>
+              <div class="search_bar">
+                <%= form_tag(tools_path, method: :get, class: "form-inline") do %>
+                <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "search" %>
+                <%= submit_tag "Search", class: "btn btn-outline-primary my-2 my-sm-0",  id: "searchbtn"  %>
+                <% end %>
+              </div>
               <% if current_user %>
+              <li class="nav-item">
+                <%= link_to 'Add tool', new_tool_path, class:"nav-link" %>
+              </li>
               <li class="nav-item" id="user_info">
                 Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your location: <span id="user_address">  <%= current_user.address %></span>
               </li>
               <li class="nav-item">
                 <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link"  %>
-              </li>
-              <li class="nav-item">
-                <%= link_to 'Add tool', new_tool_path, class:"nav-link" %>
               </li>
               <% else %>
               <li class="nav-item">
@@ -53,12 +62,6 @@
               <li class="nav-item">
                 <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
               </li>
-              <% end %>
-            </div>
-            <div class="search_bar">
-              <%= form_tag(tools_path, method: :get, class: "form-inline") do %>
-              <%= text_field_tag :search, params[:search], class: "form-control mr-sm-2", placeholder: "search" %>
-              <%= submit_tag "Search", class: "btn btn-outline-primary my-2 my-sm-0" %>
               <% end %>
             </div>
           </nav>
