--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -2,12 +2,12 @@
 <div class="row">
     <% @tools.each do |tool|%>
       <div class="card">
-        <div class="card-body" style="width: 18rem;">
+        <div class="card-body d-flex flex-column" style="width: 18rem;">
           <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
           <p class="card-text"><%= tool.description %></p>
           <p class="toolAddress"><%= tool.address %></p>
           <p>User: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
-          <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary">See posting</a>
+          <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary btn-block mt-auto">See posting</a>
         </div>
       </div>
     <% end  %>
