--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -1,4 +1,6 @@
-
+<p>* Login or signup to find tools around your location</p>
+<div id="mapid">
+</div>
 <div class="row">
     <% @tools.each do |tool|%>
       <div class="card">
@@ -11,8 +13,3 @@
         </div>
       </div>
     <% end  %>
-  </div>
-
-  <div id="mapid">
-
-  </div>
