--- a/app/assets/stylesheets/user.scss
+++ b/app/assets/stylesheets/user.scss
@@ -3,7 +3,6 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body{
   font-family: 'Rubik', sans-serif;
-  background-image: url("tools.jpeg");
   background-size: 100%;
 }
 
@@ -12,7 +11,7 @@ body{
 }
 
 #user_address{
-  visibility: hidden;
+  visibility: visible;
 }
 
 
@@ -23,8 +22,15 @@ body{
 
 .row{
   margin: 30px;
-  margin-top: 100px;
+  margin-top: 50px;
 }
+
+.show{
+  display: grid;
+  grid-template-columns: 400px 600px 600px;
+  margin: 50px;
+}
+
 
 
 .content {
@@ -38,8 +44,8 @@ body{
   z-index: 1
 }
 
-.sticky + .content {
-  padding-top: 60px;
+.content {
+  padding-top: 125px;
 }
 
 .header_title{
@@ -48,12 +54,13 @@ body{
 
 .card{
   margin: 5px;
-  background-color: rgba(255,255,255, 0.9);
+  background-color: rgba(239, 239, 239, 0.9);
 }
 .navbar{
   font-size: 16px;
   padding: 10px;
   height: 90px;
+  border-bottom: 0.5px solid lightgrey;
 }
 
 .nav-item{
