--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -1,28 +1,31 @@
-<h1>tool show</h1>
+<div class="show">
+    <div class="column1">
+      <div class="card-body " style="width: 18rem;">
+        <h1 class="card-title"><%= @tool.name  %> </h1>
+        <p><%= @tool.price  %>$/hour </p>
+        <h4>Description:</h4>
+        <p class="card-text"><%= @tool.description %></p>
+        <h4>Address:</h4>
+        <p class="toolAddress"><%= @tool.address %></p>
+        <p>User: <%=link_to( "#{@tool.user.full_name}", user_path(@tool.user) )%></p>
+        <% if current_user == @tool.user %>
+        <%= link_to "Edit your tool", edit_tool_path(@tool) %>
+        <%= link_to "detele this tool", tool_path, method: :delete%>
+        <% end %>
+      </div>
+    </div>
+    <div class="column2">
+      <div class="" id="mapid" >
 
-<div class="card-body" style="width: 18rem;">
-  <h1 class="card-title"><%= @tool.name  %> </h1>
-  <p><%= @tool.price  %>$/hour </p>
-  <h4>Description:</h4>
-  <p class="card-text"><%= @tool.description %></p>
-  <h4>Address:</h4>
-  <p class="toolAddress"><%= @tool.address %></p>
-  <p>User: <%=link_to( "#{@tool.user.full_name}", user_path(@tool.user) )%></p>
-  <% if current_user == @tool.user %>
-  <%= link_to "Edit your tool", edit_tool_path(@tool) %>
-  <%= link_to "detele this tool", tool_path, method: :delete%>
-  <% end %>
+      </div>
+    </div>
+    <div class="column3">
+      <h2>Borrow this tool:</h2>
+
+      <% if current_user %>
+        <%= render partial: 'reservations/form', locals: {tool: @tool, reservation: @reservation} %>
+      <% else %>
+        <p>if you want to borrow this tools, please <%= link_to 'Log In', new_session_path %></p>
+      <% end %>
+    </div>
 </div>
-
-
-<div id="mapid" >
-
-</div>
-
-<h2>Borrow this tool:</h2>
-
-<% if current_user %>
-  <%= render partial: 'reservations/form', locals: {tool: @tool, reservation: @reservation} %>
-<% else %>
-  <p>if you want to borrow this tools, please <%= link_to 'Log In', new_session_path %></p>
-<% end %>
