--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,7 +48,7 @@
                 <%= link_to 'Lend your Stuff', new_tool_path, class:"btn btn-outline-danger btn-lg " %>
               </li>
               <li class="nav-item" id="user_info">
-                Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your Location:  <p id="user_address"><%= current_user.address %></p>
+                Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your Location:  <span id="user_address"><%= current_user.address %></span>
               </li>
               <li class="nav-item">
                 <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link justify-content-end"  %>
