css added on reservation form

--- a/app/views/tools/show.html.erb
+++ b/app/views/tools/show.html.erb
@@ -2,7 +2,7 @@
     <div class="column1">
       <div class="card-body " style="width: 18rem;">
         <h1 class="card-title"><%= @tool.name  %> </h1>
-        <p><%= @tool.price  %>$/hour </p>
+        <p><%= @tool.price  %>$/day </p>
         <h4>Description:</h4>
         <p class="card-text"><%= @tool.description %></p>
         <h4>Address:</h4>
