--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,12 +1,14 @@
 <%= form_for([tool, reservation]) do |f| %>
-<div class="form-group">
-  <label for="reservation_time_start">From</label>
-  <%= f.date_field :reservation_time_start %>
-<div class="form-group">
-  <label for="reservation_time_end">to</label>
-   <%= f.date_field :reservation_time_end %>
-</div>
-<div class="form-group">
-  <%= f.submit "Book this tool", class:"btn btn-primary" %>
+<div class="reservation_form">
+  <div class="form-group">
+    <label for="reservation_time_start">From:</label>
+    <%= f.date_field :reservation_time_start, class: 'form-control' %>
+  <div class="form-group">
+    <label for="reservation_time_end">to:</label>
+     <%= f.date_field :reservation_time_end, class: 'form-control' %>
+  </div>
+  <div class="form-group">
+    <%= f.submit "Book this tool", class:"btn btn-primary" %>
+  </div>
 </div>
 <% end  %>
