--- a/app/views/tools/index.html.erb
+++ b/app/views/tools/index.html.erb
@@ -5,7 +5,7 @@
     <% @tools.each do |tool|%>
       <div class="card">
         <div class="card-body d-flex flex-column" style="width: 18rem;">
-          <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
+          <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/day</h1>
           <p class="card-text"><%= tool.description %></p>
           <p class="toolAddress"><%= tool.address %></p>
           <p>User: <%=link_to( "#{tool.user.full_name}", user_path(tool.user) )%></p>
