--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,25 +43,23 @@
                 <% end %>
               </div>
               <% if current_user %>
-              <ul class="nav justify-content-end">
-              <li class="nav-item">
-                <%= link_to 'Lend your Stuff', new_tool_path, class:"btn btn-outline-danger btn-lg " %>
-              </li>
-              <li class="nav-item" id="user_info">
+              <div class="nav-item">
+                <%= link_to 'Lend your Stuff', new_tool_path, class:"btn btn-warning btn-lg inline " %>
+              </div>
+              <div class="nav-item" id="user_info">
                 Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your Location:  <span id="user_address"><%= current_user.address %></span>
-              </li>
-              <li class="nav-item">
+              </div>
+              <div class="nav-item">
                 <%= link_to 'Log out', session_path("current"), :method => :delete, class:"nav-link justify-content-end"  %>
-              </li>
+              </div>
               <% else %>
-              <li class="nav-item">
+              <div class="nav-item">
                 <%= link_to 'Log In', new_session_path, class:"nav-link" %>
-              </li>
-              <li class="nav-item">
+              </div>
+              <div class="nav-item">
                 <%= link_to 'Sign Up', new_user_path, class:"nav-link" %>
-              </li>
+              </div>
               <% end %>
-              </ul>
             </div>
           </nav>
         </div>
