--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,12 +10,12 @@
 <div class="row">
   <% @user.tools.each do |tool|%>
     <div class="card">
-      <div class="card-body" style="width: 18rem;">
+      <div class="card-body d-flex flex-column" style="width: 18rem;">
         <h1 class="card-title"><%= tool.name %> - <%= tool.price  %>$/hour</h1>
         <p class="card-text"><%= tool.description %></p>
         <p><%= tool.address %></p>
         <p>User: <%= tool.user.first_name %></p>
-        <a href=<%= "/tools/#{tool.id}"%> class="btn btn-outline-primary">See posting</a>
+        <a href=<%= "/tools/#{tool.id}"%> class="btn btn-primary btn-block mt-auto">See posting</a>
       </div>
     </div>
   <% end  %>
