--- a/app/views/tools/new.html.erb
+++ b/app/views/tools/new.html.erb
@@ -1,3 +1,10 @@
-<h1>Create your tool</h1>
-
-<%= render 'form_tool', tool: @tool %>
+<div class="create_tool">
+  <div class="info_lend">
+    <h2>Do you have material that you do not use often?</h2>
+    <h3>Your neighbord might needs it !</h3>
+    <p>lend it to your neighbor and made profit of it </p>
+  </div>
+  <div class="tool_form">
+  <%= render 'form_tool', tool: @tool %>
+  </div>
+</div>
