--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -44,7 +44,7 @@
               </div>
               <% if current_user %>
               <div class="nav-item">
-                <%= link_to 'Lend your Stuff', new_tool_path, class:"btn btn-warning btn-lg inline " %>
+                <%= link_to 'List your Material', new_tool_path, class:"btn btn-warning btn-lg inline " %>
               </div>
               <div class="nav-item" id="user_info">
                 Signed in as <%= link_to("#{current_user.email}", user_path(current_user)) %> Your Location:  <span id="user_address"><%= current_user.address %></span>
