--- a/app/views/tools/_form_tool.html.erb
+++ b/app/views/tools/_form_tool.html.erb
@@ -8,19 +8,19 @@
 
 <%= form_for tool do |f| %>
 <div class="form-group">
-  <label for="name">Tool's name</label>
+  <label for="name">Material's name:</label>
   <%= f.text_field :name, class: 'form-control'  %>
 </div>
 <div class="form-group">
-  <label for="description">Tool's Description</label>
+  <label for="description">Material's Description:</label>
   <%= f.text_field :description, class: 'form-control'  %>
 </div>
 <div class="form-group">
-  <label for="price">Price</label>
+  <label for="price">Price by day:</label>
   <%= f.text_field :price, class: 'form-control'  %>
 </div>
 <div class="form-group">
-  <label for="name">Tool's address</label>
+  <label for="name">Material's Address:</label>
   <%= f.text_field :address, class: 'form-control'  %>
 </div>
 <div class="form-group">
