added validation on form for user

--- a/app/views/reservations/_form.html.erb
+++ b/app/views/reservations/_form.html.erb
@@ -1,3 +1,9 @@
+<% if reservation.errors.any? %>
+  <% reservation.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+<% end %>
+
 <%= form_for([tool, reservation]) do |f| %>
 <div class="reservation_form">
   <div class="form-group">
