--- a/app/views/users/_form_user.html.erb
+++ b/app/views/users/_form_user.html.erb
@@ -1,27 +1,28 @@
+
 <%= form_for user do |f| %>
   <div class="form-group">
     <label for="first_name">First name</label>
-    <%= f.text_field(:first_name, class: 'form-control') %>
+    <%= f.text_field(:first_name, :required => true, class: 'form-control') %>
   </div>
   <div class="form-group">
     <label for="last_name">last name</label>
-    <%= f.text_field(:last_name, class: 'form-control') %>
+    <%= f.text_field(:last_name, :required => true, class: 'form-control') %>
   </div>
   <div class="form-group">
     <label for="address">Address</label>
-    <%= f.text_field(:address, class: 'form-control') %>
+    <%= f.text_field(:address, :required => true, class: 'form-control') %>
   </div>
   <div class="form-group">
     <label for="email">Email</label>
-    <%= f.email_field(:email, class: 'form-control', placeholder:"name@example.com") %>
+    <%= f.email_field(:email, :required => true, class: 'form-control', placeholder:"name@example.com") %>
   </div>
   <div class="form-group">
     <label for="password">Password</label>
-    <%= f.password_field(:password, class: 'form-control') %>
+    <%= f.password_field(:password, :required => true, class: 'form-control') %>
   </div>
   <div class="form-group">
     <label for="password_confirmation">Password Confirmation</label>
-    <%= f.password_field(:password_confirmation, class: 'form-control') %>
+    <%= f.password_field(:password_confirmation, :required => true, class: 'form-control') %>
   </div>
 
   <div class="form-group">
