--- a/app/views/tools/_form_tool.html.erb
+++ b/app/views/tools/_form_tool.html.erb
@@ -1,8 +1,13 @@
+<% if tool.errors.any? %>
+  <% tool.errors.full_messages.each do |msg| %>
+    <li><%= msg %></li>
+  <% end %>
+<% end %>
 
 <%= form_for tool do |f| %>
 <div class="form-group">
   <label for="name">Material's name:</label>
-  <%= f.text_field :name, class: 'form-control'  %>
+  <%= f.text_field :name, :required => true, class: 'form-control'  %>
 </div>
 <div class="form-group">
   <label for="description">Material's Description:</label>
@@ -10,11 +15,11 @@
 </div>
 <div class="form-group">
   <label for="price">Price by day:</label>
-  <%= f.text_field :price, class: 'form-control'  %>
+  <%= f.text_field :price, :required => true, class: 'form-control'  %>
 </div>
 <div class="form-group">
   <label for="name">Material's Address:</label>
-  <%= f.text_field :address, class: 'form-control'  %>
+  <%= f.text_field :address, :required => true, class: 'form-control'  %>
 </div>
 <div class="form-group">
   <%= f.submit "add Tool", class:"btn btn-primary" %>
